# Fetch.ai-Hackathon-Project

./: .gitignore  README.md  pyproject.toml
fetchai/: __init__.py  currency_checker_module.py  gui_interface.py
tests/: test_currency_checker_module.py
