[tool.poetry]
name = "fetchai"
version = "0.1.0"
description = "This is a hackathon project"
authors = ["Shubh Srivastava shubh22.srivastava@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "2.25.1"
plyer = "2.1.0"
uagents = "0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
pytest = '^6.2.5'